# vivid-drums

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  vivid-package.json
.github/workflows/: smoke.yml
factory_presets/: drum_clap.json  drum_cymbal.json  drum_hihat.json  drum_kick.json  drum_snare.json  drum_tom.json
graphs/: av_sync_demo.json  drum_stack_foundation.json  drum_stack_percussion_wash.json  four_on_the_floor.json
src/: drum_clap.cpp  drum_cymbal.cpp  drum_hihat.cpp  drum_kick.cpp  drum_snare.cpp  drum_tom.cpp
tests/: test_drum_stack_assets.cpp  test_package_manifest.cpp
